fixed counter value align

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
   height:100vh;
   display: flex;
   justify-content: center;
@@ -14,7 +13,6 @@
   padding-right: 38.5px;
   padding-left: 38.5px;
   box-shadow: #cccccc 0px 2px 4px 0px;
-  align-items: center;
 }
 
 @font-face {
